--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
             <div
                 class="bg-[#121212] border-t border-gold/20 p-3 flex justify-between items-center backdrop-filter backdrop-blur-md">
                 <div class="flex items-center gap-5">
-                    <a href="#" class="text-gray-400 hover:text-gold transition-colors transform hover:scale-110"
-                        aria-label="WhatsApp">
+                    <a href="https://wa.me/5511921516743?text=Olá,%20quero%20fazer%20uma%20reserva%20para%20o%20Lounge." class="text-gray-400 hover:text-gold transition-colors transform hover:scale-110"
+                        aria-label="WhatsApp" style="color: #d4af37 !important;">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                             viewBox="0 0 16 16">
                             <path
@@ -107,7 +107,7 @@
                     </a>
                     <a href="https://www.instagram.com/dune_loungesp?igsh=ZDlzbnAwZGw1Z2Fq"
                         class="text-gray-400 hover:text-gold transition-colors transform hover:scale-110"
-                        aria-label="Instagram">
+                        aria-label="Instagram" style="color: #d4af37 !important;">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                             viewBox="0 0 16 16">
                             <path
